# poc-bns-doh-and-resolver

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: dns.rs  main.rs  utils.rs
